workspace = { members = ["minimum-number-of-pushes-to-type-word", "integer-to-words", "lemon-change", "maximum-distance"] }
[package]
name = "leetcode-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
