workspace = { members = [
    "minimum-number-of-pushes-to-type-word",
    "integer-to-words",
    "lemon-change",
    "maximum-distance",
    "number-completement",
    "sudoku-solver",
    "binary-tree-postorder-traversal",
    "validate-binary-tree",
    "minimum-time-difference",
    "fraction-addition",
    "median-of-two-sorted-arrays",
    "uncommon-words-from-2-sentences",
    "largest-number"
    , "different-ways-to-add-parentheses"] }
[package]
name = "leetcode-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
