workspace = { members = [
    "minimum-number-of-pushes-to-type-word",
    "integer-to-words",
    "lemon-change",
    "maximum-distance",
    "number-completement",
    "sudoku-solver",
    "binary-tree-postorder-traversal",
    "validate-binary-tree",
    "minimum-time-difference",
    "fraction-addition",
    "median-of-two-sorted-arrays",
    "uncommon-words-from-2-sentences",
    "largest-number",
    "different-ways-to-add-parentheses",
    "shortest-palindrome",
    "rank-transform-of-an-array",
    "check-if-array-pairs-are-division-by-k-1497",
    "make-sum-divisible-by-p-1590",
    "divide-players-into-teams-of-equal-skill-2491",
    "permutation-in-strings-567",
    "sentence-similarity-iii-1813",
    "minimum-string-length-after-removing-substrings-2696", "minimum-number-of-swap-to-make-the-string-balanced-1963"] }
[package]
name = "leetcode-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
